# pyHydrabus

./: .readthedocs.yml  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: python-publish.yml
docs/source/: conf.py  index.rst  pyHydrabus.rst
pyHydrabus/: __init__.py  hydrabus.py  i2c.py  mmc.py  nfc.py  onewire.py  protocol.py  rawwire.py  sdio.py  smartcard.py  spi.py  swd.py  uart.py
